--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,8 @@
 body {
     width: 100vw;
+    height: 100vh;
+    overflow-y: auto;
+    overflow-x: hidden;
     margin: 0;
     padding: 0;
     font-size: 1rem;
@@ -17,6 +20,21 @@ body {
 
 .blue {
     color: blue;
+}
+
+.activeLink {
+    padding: 5px;
+    border-bottom: 3px yellowgreen solid;
+    border-top: 3px yellowgreen solid;
+    border-radius: 20px;
+}
+
+.hidden {
+    display: none;
+}
+
+.visible {
+    display: block;
 }
 
 /* HEADER */
@@ -54,6 +72,10 @@ nav ul {
     background: rgb(97, 97, 97);
 }
 
+nav ul li {
+    padding: 5px;
+}
+
 header nav ul li a {
     text-decoration: none;
     font-weight: bolder;
@@ -62,13 +84,13 @@ header nav ul li a {
     letter-spacing: 0.3rem;
     transition: 0.6s;
     padding: 5px;
-    border-radius: 30px;
+    border-radius: 20px;
 }
 
 header nav ul li a:hover {
     color: rgb(77, 87, 77);
-    padding: 5px 12px;
-    border-radius: 30px;
+    padding: 5px;
+    border-radius: 20px;
     border: 3px solid rgb(220, 238, 220);
     background: rgb(190, 189, 189);
 }
@@ -121,4 +143,39 @@ header nav ul li a:hover {
 
 .mainPage__container-crypto p {
     font-weight: bolder;
+}
+
+/* MARKET */
+
+.market__container {
+    margin-top: 50px;
+}
+
+.market__container form {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.market__findArticle {
+    width: 60%;
+    margin: 0 auto;
+    display: block;
+    text-align: center;
+    border: 2px solid black;
+    border-radius: 15px;
+}
+
+.market__findArticle h1 {
+    margin-bottom: 30px;
+}
+
+/* MY WALLET */
+
+.wallet__container-single-crypto {
+    display: block;
+    width: 400px;
+    height: auto;
+    margin: 10px auto;
+    border: 1px solid black;
+    text-align: center;
 }
