--- a/styles.css
+++ b/styles.css
@@ -172,10 +172,14 @@ header nav ul li a:hover {
 /* MY WALLET */
 
 .wallet__container-single-crypto {
-    display: block;
     width: 400px;
     height: auto;
     margin: 10px auto;
     border: 1px solid black;
+    text-align: center;
+}
+
+.wallet__login-form {
+    margin-top: 30px;
     text-align: center;
 }
