--- a/styles.css
+++ b/styles.css
@@ -180,6 +180,14 @@ header nav ul li a:hover {
 }
 
 .wallet__login-form {
+    display: block;
+    width: auto;
     margin-top: 30px;
+    text-align: center;
+}
+
+/* LOGOUT */
+
+.logout-info {
     text-align: center;
 }
